<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_item1"
        android:enabled="true"
        android:icon="@drawable/sales"
        android:title="@string/title_sales"
        android:visible="true" />
    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/price"
        android:title="@string/title_products"/>
    <item
        android:id="@+id/action_item3"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        android:visible="true" />
    <item
        android:id="@+id/action_item4"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/title_setting"
        android:visible="true" />
    <item
        android:id="@+id/action_item5"
        android:enabled="true"
        android:icon="@drawable/account"
        android:title="@string/title_accnt"
        android:visible="true" />
</menu>