<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cashier_item_sale"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_sales"
        android:visible="true" />
    <item
        android:id="@+id/cashier_item_inventory_details"
        android:icon="@drawable/ic_package_box"
        android:title="@string/inventory"/>
    <item
        android:id="@+id/cashier_item_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        android:visible="true" />
    <item
        android:id="@+id/cashier_item_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting"
        android:visible="true" />
    <item
        android:id="@+id/cashier_item_account"
        android:enabled="true"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_accnt"
        android:visible="true" />
</menu>